# pad-plus-ai

./: .clinerules  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST_FINAL.md  FINAL_DEPLOYMENT_CHECKLIST.md  Makefile  README.en.md  README.md  README.ru.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_ENVIRONMENT_VARIABLES.md  debug_test_connection.py  debug_with_key.py  docker-compose.monitoring.yml  export_old_data.py  habr_article_discrepancies_report.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt  start.bat  start_bot.bat  start_server.py  stop.bat  test_api_openrouter.py  testing_feedback.md  Рентген для нейросетей, или как я перестал понимать собственный ИИ и написал свой APM..md  задачи.md
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
articles/: (АНГЛ)Creation of a modular cognitive architecture based on modern language models..md  PAD+ AI v4.0 исследовательская когнитивная архитектура поверх LLM.md  X-Ray for AI — or how I stopped understanding my own neural network and built my own APM.md  telegram-pack.md
backend/: main.py  main_simple.py  main_stable.py  requirements.txt  test_endpoints.py
docs/: ACTUAL_STATE.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION_RULES.md  HEALER.md  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  README_DISCREPANCIES.md  RELEASE_v4.0.md  RESEARCH_PLATFORM_IMPLEMENTATION_PLAN.md  STABILIZATION_PLAN.md
experiments/: README.md  RESEARCH_PACKAGE.md  analysis.py  researches.md  runner.py
frontend/: .gitignore  check.cjs  vite.config.js
memory/: rag.py
scripts/: apply_migrations.py  backfill_embeddings.py  check.bat  check_db.py  check_render_config.py  check_render_db.py  debug_render_memory.py  diagnostic_production.py  impulse.py  init_db.py  init_supabase_simple.sql  migrate.py  migrate_to_supabase.py  migrate_traces.py  monitor_deploy.py  run_migration.py  seed_knowledge_graph.py  simple_test.py  smoke_test.py  start_server.py  stop-arkaim-services.bat  stop-arkaim-services.ps1  test_batch_query.py  verify_graph.py  verify_migrations.py  verify_render_fix.py
tests/: README.md  conftest.py  impulse_research.py  test_app_startup.py  test_auth_flow.py  test_document_processor.py  (+10 more)
(+315 files in other folders)
