[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pad-plus-ai"
version = "4.0.0"
description = "Cognitive pipeline layer for LLMs — PAD+ emotion model, memory, autonomy, meta-cognition"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
    "ai", "llm", "cognitive-architecture", "emotion", "memory",
    "rag", "autonomy", "meta-cognition", "pipeline",
    "pad", "pleasure-arousal-dominance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "litellm>=1.50.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "slowapi>=0.1.9",
]

[project.urls]
Homepage = "https://pad-plus-ai.onrender.com"
Repository = "https://github.com/Ovladimirovich/pad-plus-ai"
Documentation = "https://github.com/Ovladimirovich/pad-plus-ai/tree/main/docs"
Changelog = "https://github.com/Ovladimirovich/pad-plus-ai/blob/main/CHANGELOG.md"

[project.scripts]
pad-plus-ai = "backend.main:start"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "bandit>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "scripts"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "rag: RAG memory tests",
    "autonomy: Autonomy tests",
    "emotion: Emotion model tests",
    "pipeline: Pipeline tests",
]
